--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "magnific-popup": "^1.1.0"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.19",
         "browser-sync": "2.26.7",
         "del": "5.1.0",
         "gulp": "4.0.2",
